# alura_projects

csharp/: Alura-CShap.sln
csharp/.devcontainer/: Dockerfile  devcontainer.json
csharp/Atividades/: Program.cs
csharp/Atividades.POO/: Carro.cs  Estoque.cs  Produto.cs  Program.cs
csharp/Atividades.POO/M01-ATV07/: ContaBancaria.cs  Titular.cs
csharp/ScreenSound/: Program.cs
csharp/ScreenSound.POO/: Album.cs  Musica.cs  Program.cs
html-css/: Dockerfile  README.md  compose.yaml  nginx.conf
html-css/.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yaml  nginx.dev.conf
html-css/page/: index.html  styles.css
python_api/: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
python_api/.devcontainer/: Dockerfile  devcontainer.json
python_api/src/: app.py  app_cardapio.py  app_fastapi.py  app_request.py
python_api/src/exception/: ext_api_error.py
python_api/src/exe01_veiculo/: carro.py  main.py  moto.py  veiculo.py
python_api/src/extras/app_garagem/: carro.py  veiculo.py
python_api/src/extras/exe01_veiculo/: main.py  moto.py
python_api/src/modelos/: restaurante.py
python_api/src/modelos/cardapio/: bebida.py  item_cardapio.py  prato.py  sobremesa.py
python_api/test/: restaurante.rest
python_api/tests/: restaurante.rest
python_lang/.devcontainer/: Dockerfile  devcontainer.json
python_lang/src/pkg01_py_lang/: app.py
python_lang/src/pkg01_py_lang/exe_pratico/: exe04.py
python_lang/src/pkg02_py_oo/: app.py  app_avalicoes.py
python_lang/src/pkg02_py_oo/exe_pratico/: exe01.py  exe02.py  exe05.py  exe06.py  (+1 more)
(+4 files in other folders)
