[tool.poetry]
name = "alura api"
version = "0.1.0"
description = "Projeto de exercício para o curso de Python WEB API da Alura."
authors = ["Marlos Ribeiro <marlos.mgrb@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.110.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
